# jquants-dbt-pipeline

./: .gitignore  .sqlfluff  .yamllint  README.md  env.sample  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pipeline.yml
dbt_project/: .sqlfluff  .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/marts/: _marts.yml  dim_company.sql  dim_date.sql  fct_stock_prices.sql
dbt_project/models/staging/: _staging.yml  stg_listed_info.sql  stg_stock_prices.sql
src/jquants_pipeline/: __init__.py  cli.py  client.py
